#Did a lot but actually nothing:
- possibilities boxes

#Good Job - it's great.

--- a/index.html
+++ b/index.html
@@ -373,58 +373,58 @@
         <h1 class="text-5xl md-headLine text-center mb-6 text-font-business block" id="possibilitiesHead"></h1>
         <h1 class="text-4xl md-subHeadLine text-center mb-16 text-font-business block" id="possibilitiesSub"></h1>
         <div class="flex justify-center flex-wrap mx-12" id="offerTileBox">
-            <div class="lg:hidden flex flex-col" id="mobileTiles">
+            <div class="lg:hidden flex flex-col mb-16" id="mobileTiles">
                 <div class="flex justify-center mb-4">
-                    <div class="h-64 w-64 offerTileWidth offerTileHeight bg-kojami-blue mx-2">
-                        <a href="#contact" class="h-full w-full cursor-default">
-                            <div class="w-2/5 mx-auto mt-16 mb-10">
+                    <div class="bg-kojami-blue w-1/2 mx-2">
+                        <a href="#contact" class="cursor-default ">
+                            <div class="w-1/2 mx-auto pt-10">
                                 <img src="img/svg/tools.svg" alt="icon">
                             </div>
-                            <p class="text-white text-center text-3xl -mt-1 mx-4 font-bold pb-3 block" id="mobileTile1"></p>
+                            <p class="text-white text-center text-3xl font-bold block mt-8 pb-10 px-4" id="mobileTile1"></p>
                         </a>
                     </div>
-                    <div class="h-64 w-64 offerTileWidth offerTileHeight bg-kojami-blue mx-2">
-                        <a href="#contact" class="h-full w-full cursor-default">
-                            <div class="w-2/5 mx-auto mt-16 mb-10">
+                    <div class="bg-kojami-blue w-1/2 mx-2">
+                        <a href="#contact" class="cursor-default my-4">
+                            <div class="w-1/2 mx-auto pt-10">
                                 <img src="img/svg/nut.svg" alt="icon">
                             </div>
-                            <p class="text-white text-center text-3xl -mt-1 mx-3 font-bold pb-3 block" id="mobileTile2"></p>
+                            <p class="text-white text-center text-3xl font-bold block mt-8 pb-10 px-4" id="mobileTile2"></p>
                         </a>
                     </div>
                 </div>
                 <div class="flex justify-center mb-4">
-                    <div class="h-64 w-64 offerTileWidth offerTileHeight bg-kojami-blue mx-2">
-                        <a href="#contact" class="h-full w-full cursor-default">
-                            <div class="w-2/5 mx-auto mt-16 mb-10">
-                                <img src="img/svg/wrench.svg" alt="icon">
+                    <div class="bg-kojami-blue w-1/2 mx-2">
+                        <a href="#contact" class="cursor-default ">
+                            <div class="w-1/2 mx-auto pt-10">
+                                <img src="img/svg/tools.svg" alt="icon">
                             </div>
-                            <p class="text-white text-center text-3xl -mt-1 mx-3 font-bold pb-2 block" id="mobileTile3"></p>
+                            <p class="text-white text-center text-3xl font-bold block mt-8 pb-10 px-4" id="mobileTile3"></p>
                         </a>
                     </div>
-                    <div class="h-64 w-64 offerTileWidth h-full bg-kojami-blue mx-2">
-                        <a href="#contact" class="h-full w-full cursor-default">
-                            <div class="w-2/5 mx-auto mt-16 mb-10">
-                                <img src="img/svg/office-building.svg" alt="icon">
+                    <div class="bg-kojami-blue w-1/2 mx-2">
+                        <a href="#contact" class="cursor-default my-4">
+                            <div class="w-1/2 mx-auto pt-10">
+                                <img src="img/svg/nut.svg" alt="icon">
                             </div>
-                            <p class="text-white text-center text-3xl mx-2 md-mb-55 pb-1 font-bold block" id="mobileTile4"></p>
+                            <p class="text-white text-center text-3xl font-bold block mt-8 pb-10 px-4" id="mobileTile4"></p>
                         </a>
                     </div>
                 </div>
-                <div class="flex justify-center">
-                    <div class="h-64 w-64 offerTileWidth offerTileHeight bg-kojami-blue mx-2">
-                        <a href="#contact" class="h-full w-full cursor-default">
-                            <div class="w-2/5 mx-auto mt-16 mb-10">
-                                <img src="img/svg/cooperation.svg" alt="icon">
+                <div class="flex justify-center mb-4">
+                    <div class="bg-kojami-blue w-1/2 mx-2">
+                        <a href="#contact" class="cursor-default ">
+                            <div class="w-1/2 mx-auto pt-10">
+                                <img src="img/svg/tools.svg" alt="icon">
                             </div>
-                            <p class="text-white text-center text-3xl -mt-1 mx-2 font-bold pb-3 block" id="mobileTile5"></p>
+                            <p class="text-white text-center text-3xl font-bold block mt-8 pb-10 px-4" id="mobileTile5"></p>
                         </a>
                     </div>
-                    <div class="h-64 w-64 offerTileWidth offerTileHeight bg-kojami-blue mx-2">
-                        <a href="#contact" class="h-full w-full cursor-default">
-                            <div class="w-2/5 mx-auto mt-16 mb-10">
-                                <img src="img/svg/accounting.svg" alt="icon">
+                    <div class="bg-kojami-blue w-1/2 mx-2">
+                        <a href="#contact" class="cursor-default my-4">
+                            <div class="w-1/2 mx-auto pt-10">
+                                <img src="img/svg/nut.svg" alt="icon">
                             </div>
-                            <p class="text-white text-center text-3xl -mt-1 mx-2 font-bold pb-3 block" id="mobileTile6"></p>
+                            <p class="text-white text-center text-3xl font-bold block mt-8 pb-10 px-4" id="mobileTile6"></p>
                         </a>
                     </div>
                 </div>
